--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="resume-title">Sumary</h3>
+          <h3 class="resume-title">Summary</h3>
           <div class="resume-item pb-0">
             <h4>Professional summary</h4>
             <p><em>Innovative and deadline-driven developer with 2+ years of experience designing and developing web applications  from initial concept to final, polished deliverable.</em></p>
