--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <h1><a href="index.html">DUSARI CHANDRA SHEKHAR</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>DEVEOPER</span> from INDIA</h2>
+      <h2>I'm a passionate <span>DEVELOPER</span> from INDIA</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
